--- a/removeNamesFromList.html
+++ b/removeNamesFromList.html
@@ -13,7 +13,7 @@
 </ul>
 <form>
     <input type="text" ng-model="enteredname">
-    <button ng-click="addName()">Add</button>
+    <button ng-click="addName()">Create</button>
 </form>
 <script>
     var namesApp= angular.module('namesApp', []);
